# earthian-biosense

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  TESTING_PLAN.md  requirements.txt
claude-dev/: DEV_UPDATE_2025-11-30_phase_0_project_setup.md  DEV_UPDATE_2025-11-30_phase_1_biosignal_pipeline.md
concepts/: entrainment-coherence-freedom.md
config/: devices.json
context/: eecp-draft-spec-v.0.1.md
desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs
desktop/src-tauri/src/ble/: mod.rs  parser.rs  registry.rs
desktop/src-tauri/src/hrv/: mod.rs  movement.rs  phase.rs
desktop/src-tauri/src/motion/: mod.rs
desktop/src-tauri/src/session/: mod.rs
docs/: metrics.md  movement-preserving-classification.md  overview.md  phase-space.md  proto-labels.md  running-a-session.md  theoretical-grounding.md  two-axis-mode-space-SKETCH.md
ios/: EBSCapture-style-guide.md
prompts/: session-interpreter.md
scripts/: capture_pmd_acc.py  describe_session.py  find_outlier.py  join_ebs_vibe.py  process_session.py
specs/: CHIMERA_ECOLOGY_SPEC_v0.1.md  DYADIC_EBS_ARCHITECTURE_v0.1.md  SPEC-010-vibe-harness-bridge.md  SPEC-012-triangulated-session-dashboard.md  SPEC-013-accelerometer-motion-channel.md  SPEC-014-two-axis-mode-classification.md  human-plant-coupling-v0.1.md  initial-spec-v.0.1.md  ios-capture-app-v0.1.md  ios-capture-app-v0.2.md  pi-field-node-v0.1.md  websocket-api-v0.1.md
src/: __init__.py  app.py  (+1 more)
(+129 files in other folders)
